POST request with multiple indexes
