# public/swagger/swagger.json
@@ -73,71 +73,102 @@
                 "tags": [
                     "Поштові індекси"
                 ],
-                "summary": "Додати новий поштовий індекс",
-                "description": "Додає новий запис поштового індексу в базу даних.",
+                "summary": "Додати один або кілька поштових індексів",
+                "description": "Додає один або декілька записів поштового індексу в базу даних.",
                 "operationId": "1002a10f8287e969900143706dfe7106",
                 "requestBody": {
                     "required": true,
                     "content": {
                         "application/json": {
                             "schema": {
-                                "required": [
-                                    "oblast",
-                                    "settlement",
-                                    "postal_code",
-                                    "region",
-                                    "post_branch",
-                                    "post_office",
-                                    "post_code_office"
-                                ],
-                                "properties": {
-                                    "oblast": {
-                                        "type": "string",
-                                        "example": "Вінницька"
+                                "type": "array",
+                                "items": {
+                                    "required": [
+                                        "oblast",
+                                        "settlement",
+                                        "postal_code",
+                                        "region",
+                                        "post_branch",
+                                        "post_office",
+                                        "post_code_office"
+                                    ],
+                                    "properties": {
+                                        "oblast": {
+                                            "type": "string",
+                                            "example": "Вінницька"
+                                        },
+                                        "old_district": {
+                                            "type": "string",
+                                            "example": "Вінницький"
+                                        },
+                                        "new_district": {
+                                            "type": "string",
+                                            "example": "Вінницький"
+                                        },
+                                        "settlement": {
+                                            "type": "string",
+                                            "example": "Вінниця"
+                                        },
+                                        "postal_code": {
+                                            "type": "string",
+                                            "example": "21004"
+                                        },
+                                        "region": {
+                                            "type": "string",
+                                            "example": "Центральний"
+                                        },
+                                        "district_new": {
+                                            "type": "string",
+                                            "example": "Вінницький район"
+                                        },
+                                        "settlement_eng": {
+                                            "type": "string",
+                                            "example": "Vinnytsia"
+                                        },
+                                        "post_branch": {
+                                            "type": "string",
+                                            "example": "Відділення №4"
+                                        },
+                                        "post_office": {
+                                            "type": "string",
+                                            "example": "Відділення №4"
+                                        },
+                                        "post_code_office": {
+                                            "type": "string",
+                                            "example": "21004-4"
+                                        }
                                     },
-                                    "old_district": {
-                                        "type": "string",
-                                        "example": "Вінницький"
-                                    },
-                                    "new_district": {
-                                        "type": "string",
-                                        "example": "Вінницький"
-                                    },
-                                    "settlement": {
-                                        "type": "string",
-                                        "example": "Вінниця"
-                                    },
-                                    "postal_code": {
-                                        "type": "string",
-                                        "example": "21004"
-                                    },
-                                    "region": {
-                                        "type": "string",
-                                        "example": "Центральний"
-                                    },
-                                    "district_new": {
-                                        "type": "string",
-                                        "example": "Вінницький район"
-                                    },
-                                    "settlement_eng": {
-                                        "type": "string",
-                                        "example": "Vinnytsia"
-                                    },
-                                    "post_branch": {
-                                        "type": "string",
-                                        "example": "Відділення №4"
-                                    },
-                                    "post_office": {
-                                        "type": "string",
-                                        "example": "Відділення №4"
-                                    },
-                                    "post_code_office": {
-                                        "type": "string",
-                                        "example": "21004-4"
-                                    }
+                                    "type": "object"
+                                }
+                            },
+                            "example": [
+                                {
+                                    "oblast": "Вінницька",
+                                    "old_district": "Вінницький",
+                                    "new_district": "Вінницький",
+                                    "settlement": "Вінниця",
+                                    "postal_code": "21004",
+                                    "region": "Центральний",
+                                    "district_new": "Вінницький район",
+                                    "settlement_eng": "Vinnytsia",
+                                    "post_branch": "Відділення №4",
+                                    "post_office": "Відділення №4",
+                                    "post_code_office": "21004-4"
                                 },
-                                "type": "object"
-                            }
+                                {
+                                    "oblast": "Київська",
+                                    "old_district": "Києво-Святошинський",
+                                    "new_district": "Бучанський",
+                                    "settlement": "Буча",
+                                    "postal_code": "08292",
+                                    "region": "Північний",
+                                    "district_new": "Бучанський район",
+                                    "settlement_eng": "Bucha",
+                                    "post_branch": "Відділення №1",
+                                    "post_office": "Відділення №1",
+                                    "post_code_office": "08292-1"
+                                }
+                            ]
                         }
                     }
                 },
@@ -147,6 +178,9 @@
                     },
                     "400": {
                         "description": "Невірний запит"
+                    },
+                    "409": {
+                        "description": "Помилка: поштовий індекс вже існує"
                     },
                     "500": {
                         "description": "Помилка сервера"
